# dls-valkyrie

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  environment.yml  semver.yml  setup.cfg  setup.py
exercises/: base.py
exercises/10-websocket_server/: main.py
exercises/10-websocket_server/html/: index.html  index.js  maxiv_valkyrie_websocket_reader.js
exercises/11-proxy/: config.json  main.py
recipe/: meta.yaml
src/dls_valkyrie_lib/: valkyrie.py  version.py
src/dls_valkyrie_lib/file/: writer.py
src/dls_valkyrie_lib/websockets/: reader.py  writer.py
src/dls_valkyrie_lib/zmq_pubsub/: reader.py  writer.py
src/dls_valkyrie_lib/zmq_pullpush/: reader.py  writer.py
src/dls_valkyrie_lib/zmq_pushpull/: reader.py  writer.py
src/dls_valkyrie_lib/zmq_reqrep_WIP/: reader.py  writer.py  writer_thread.py
tests/: conftest.py
tests/01-writer_reader/: test_01.py
tests/02-missed_unthreaded/: test_02.py
tests/03-missed_threaded/: test_03.py
tests/04-dataless/: test_04.py
tests/05-speed/: test_05.py
tests/06-pullpush/: test_06.py
tests/07-websockets/: config.json  test_07.py
