[bumpversion]
current_version = 4.1.2
allow_dirty = True

[bumpversion:file:src/dls_valkyrie_lib/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[metadata]
name = dls-valkyrie
description = Mid level workflow interface.
url = https://github.com/dls-controls/dls-python3-skeleton
author = David Erb
author_email = david.erb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
packages = find:
package_dir = 
	=src

[options.extras_require]
dev = 
	black==21.9b0
	isort>5.0
	pytest-cov
	mypy
	flake8-isort
	sphinx-rtd-theme-github-versions
	pre-commit

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	dls-python3-skeleton = dls_python3_skeleton.__main__:main

[mypy]
ignore_missing_imports = True

[isort]
profile = black
float_to_top = true

[flake8]
max-line-length = 88
extend-ignore = 
	E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
	F811,  # support typing.overload decorator

[coverage:run]
omit = */_version_git.py
data_file = /tmp/dls_python3_skeleton.coverage

[coverage:paths]
source = 
	src
	**/site-packages/
